overlay: NightLight: Allow lower temperatures
AOSP's Temperature->Color conversion is off (or at least, doesn't line up with cf.lumen),
so let's lower the minimum temp to give users more choice.

Change-Id: If69f93176078bcbf25c2d58cd8a21a2e0c0734de
Signed-off-by: Joe Maples <joe@frap129.org>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -250,4 +250,8 @@
 
     <!-- Whether this device is supporting the camera toggle -->
     <bool name="config_supportsCamToggle">true</bool>
+
+    <!-- Default color temperature, in Kelvin, to tint the screen when Night display is
+         activated. -->
+    <integer name="config_nightDisplayColorTemperatureDefault">2650</integer>
 </resources>
