--- a/overlay/packages/apps/SimpleDeviceConfig/res/values/config.xml
+++ b/overlay/packages/apps/SimpleDeviceConfig/res/values/config.xml
@@ -61,6 +61,8 @@
 
         <!-- Use new privacy indicators for location -->
         <item>privacy/location_indicators_enabled=true</item>
+        <!-- Allow users to disable location indicators in Developer Options -->
+        <item>privacy/location_indicator_settings_enabled=true</item>
 
         <!--
             Disable the TF input classifier entirely to save CPU and fix log
