HACK: overlay: core: Suppress Intent Filter Verification Service crashes
Intent Filter Verification Service, the AOSP service that verifies
app link domains, is crashing for some users depending on their
installed apps. Temporarily suppress the crashes until we have a better
solution.

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -260,4 +260,7 @@
 
     <!--  Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">4</integer>
+
+    <!-- Suppress Intent Filter Verification Service crashes -->
+    <string translatable="false" name="config_appsNotReportingCrashes">com.android.statementservice</string>
 </resources>
