overlay: core: Suppress System UI ANRs
It looks like Android 12 qpr1 still has the bug where "System UI not
responding" dialogs appear sporadically after taking a screenshot. Just
suppress the ANRs for now.

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -261,6 +261,6 @@
     <!--  Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">4</integer>
 
-    <!-- Suppress Intent Filter Verification Service crashes -->
-    <string translatable="false" name="config_appsNotReportingCrashes">com.android.statementservice</string>
+    <!-- Suppress Intent Filter Verification Service crashes and System UI ANRs (both AOSP bugs) -->
+    <string translatable="false" name="config_appsNotReportingCrashes">com.android.statementservice,com.android.systemui</string>
 </resources>
